add_library(vgui_controls STATIC)

add_library(vgui_controls::vgui_controls ALIAS vgui_controls)

set_target_properties(vgui_controls PROPERTIES PREFIX "")

target_include_directories(vgui_controls
    PRIVATE
    ${CMAKE_SOURCE_DIR}/common
    ${CMAKE_SOURCE_DIR}/public
)

target_link_libraries(vgui_controls
    PRIVATE
    tier0::tier0
    tier1::tier1
)

if (OS_LINUX)
    set_target_properties(vgui_controls PROPERTIES
        POSITION_INDEPENDENT_CODE ON
    )
endif ()

target_sources_grouped(
    TARGET vgui_controls
    NAME "Source Files"
    FILES
    ${CMAKE_SOURCE_DIR}/public/filesystem_helpers.cpp
    ${CMAKE_SOURCE_DIR}/vgui2/src/vgui_key_translation.cpp
    AnalogBar.cpp
    AnimatingImagePanel.cpp
    AnimationController.cpp
    BitmapImagePanel.cpp
    BuildFactoryHelper.cpp
    BuildGroup.cpp
    BuildModeDialog.cpp
    Button.cpp
    CheckButton.cpp
    CheckButtonList.cpp
    CircularProgressBar.cpp
    ComboBox.cpp
    ControllerMap.cpp
    DirectorySelectDialog.cpp
    Divider.cpp
    EditablePanel.cpp
    ExpandButton.cpp
    FileOpenDialog.cpp
    FileOpenStateMachine.cpp
    FocusNavGroup.cpp
    Frame.cpp
    GraphPanel.cpp
    HTML.cpp
    Image.cpp
    ImageList.cpp
    ImagePanel.cpp
    InputDialog.cpp
    KeyBindingHelpDialog.cpp
    KeyBoardEditorDialog.cpp
    KeyRepeat.cpp
    Label.cpp
    ListPanel.cpp
    ListViewPanel.cpp
    Menu.cpp
    MenuBar.cpp
    MenuButton.cpp
    MenuItem.cpp
    MessageBox.cpp
    MessageDialog.cpp
    Panel.cpp
    PanelListPanel.cpp
    PerforceFileExplorer.cpp
    PerforceFileList.cpp
    ProgressBar.cpp
    ProgressBox.cpp
    PropertyDialog.cpp
    PropertyPage.cpp
    PropertySheet.cpp
    QueryBox.cpp
    RadioButton.cpp
    RichText.cpp
    RotatingProgressBar.cpp
    ScalableImagePanel.cpp
    ScrollBar.cpp
    ScrollBarSlider.cpp
    ScrollableEditablePanel.cpp
    SectionedListPanel.cpp
    Slider.cpp
    Splitter.cpp
    TextEntry.cpp
    TextImage.cpp
    ToggleButton.cpp
    ToolWindow.cpp
    Tooltip.cpp
    TreeView.cpp
    TreeViewListControl.cpp
    URLLabel.cpp
    WizardPanel.cpp
    WizardSubPanel.cpp
    consoledialog.cpp
    controls.cpp
    cvartogglecheckbutton.cpp
    perforcefilelistframe.cpp
    savedocumentquery.cpp
    subrectimage.cpp
)

target_sources_grouped(
    TARGET vgui_controls
    NAME "Public Header Files"
    FILES
    ${CMAKE_SOURCE_DIR}/public/Color.h
    ${CMAKE_SOURCE_DIR}/public/filesystem.h
    ${CMAKE_SOURCE_DIR}/public/filesystem_helpers.h
    ${CMAKE_SOURCE_DIR}/public/tier0/memdbgoff.h
    ${CMAKE_SOURCE_DIR}/public/tier0/memdbgon.h
    ${CMAKE_SOURCE_DIR}/public/tier1/KeyValues.h
    ${CMAKE_SOURCE_DIR}/public/tier1/interface.h
    ${CMAKE_SOURCE_DIR}/public/tier1/mempool.h
    ${CMAKE_SOURCE_DIR}/public/tier1/utlmemory.h
    ${CMAKE_SOURCE_DIR}/public/tier1/utlrbtree.h
    ${CMAKE_SOURCE_DIR}/public/tier1/utlvector.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/AnalogBar.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/AnimatingImagePanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/AnimationController.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/BitmapImagePanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/BuildGroup.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/BuildModeDialog.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/Button.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/CheckButton.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/CheckButtonList.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/CircularProgressBar.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ComboBox.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ControllerMap.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/Controls.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/DialogManager.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/DirectorySelectDialog.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/Divider.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/EditablePanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ExpandButton.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/FileOpenDialog.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/FileOpenStateMachine.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/FocusNavGroup.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/Frame.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/GraphPanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/HTML.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/Image.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ImageList.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ImagePanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/InputDialog.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/KeyBindingHelpDialog.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/KeyBindingMap.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/KeyBoardEditorDialog.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/KeyRepeat.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/Label.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ListPanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ListViewPanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/Menu.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/MenuBar.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/MenuButton.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/MenuItem.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/MessageBox.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/MessageDialog.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/MessageMap.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/PHandle.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/Panel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/PanelAnimationVar.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/PanelListPanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/PerforceFileExplorer.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/PerforceFileList.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ProgressBar.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ProgressBox.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/PropertyDialog.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/PropertyPage.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/PropertySheet.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/QueryBox.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/RadioButton.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/RichText.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/RotatingProgressBar.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ScalableImagePanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ScrollBar.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ScrollBarSlider.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ScrollableEditablePanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/SectionedListPanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/Slider.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/Splitter.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/TextEntry.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/TextImage.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ToggleButton.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/ToolWindow.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/Tooltip.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/TreeView.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/TreeViewListControl.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/URLLabel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/WizardPanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/WizardSubPanel.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/consoledialog.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/cvartogglecheckbutton.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/perforcefilelistframe.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/savedocumentquery.h
    ${CMAKE_SOURCE_DIR}/public/vgui_controls/subrectimage.h
)
